--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://localhost:3306/currency?useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.data=classpath:/data.sql
