--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/currency?useSSL=false&useUnico
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.data=classpath:/data.sql
+
+exchange.currency.base.url=https://free.currencyconverterapi.com/api/v5/convert?q=
+
