--- a/server/pom.xml
+++ b/server/pom.xml
@@ -63,6 +63,11 @@
             <scope>test</scope>
             <version>1.4.194</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
     <properties>
