--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.data=classpath:/data.sql
 
 exchange.currency.base.url=https://free.currencyconverterapi.com/api/v5/convert?q=
 
+exchange.currency.base.max.history = 365
+exchange.currency.base.max.period = 7
