ended rest for basicPriceCurrencyIndex

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,3 +9,5 @@ exchange.currency.base.url=https://free.currencyconverterapi.com/api/v5/convert?
 
 exchange.currency.base.max.history = 365
 exchange.currency.base.max.period = 7
+
+exchange.currency.default=PLN
