--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url=jdbc:mysql://localhost:3306/currency?useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
